test/should_fail/string.erl
-module(string).

-export([f/0]).

-spec f() -> ok.
f() -> "".
